# pjm

./: .gitignore  BUILDNOTES.md  README.md  pjm.cabal  stack.yaml
src/: Lib.hs  Ontology.hs
