name:                 pjm
version:              0.1.0.0
synopsis:             Project Management for Software Teams
description:          Please see README.md
homepage:             http://github.com/johnpmayer/pjm#README
license:              AGPL
license-file:         LICENSE
author:               John P Mayer Jr
maintainer:           john.p.mayer.jr@gmail.com
copyright:            2016 John P Mayer Jr
category:             Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
  build-depends:        base >= 4.7 && < 5
                      , graphviz
                      , rdf4h
                      , text
  default-language:     Haskell2010

executable pjm-exe
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , pjm
  default-language:     Haskell2010

test-suite pjm-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , pjm
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:       git
  location:   https://github.com/johnpmayer/pjm
